--- a/app/views/about/main.html.erb
+++ b/app/views/about/main.html.erb
@@ -2,11 +2,11 @@
   <div class="user-course-header">
     <% if current_user == @user %>
       <%= link_to create_course_path, :class => "button primary new-course" do %>
-        <%= t('create_course') %>
+        创建广告
         <i class='icon-hand-right icon-large'></i>
       <% end %>
     <% end %>
-    <h2><%= t('my_courses') %>:</h2>
+    <h2>我的广告:</h2>
   </div>
   <% if @courses.present? %>
     <div class="courses">
